--- a/media/vscode.css
+++ b/media/vscode.css
@@ -134,9 +134,10 @@ textarea::placeholder {
   border-radius: 6px;
 }
 .rc-slider-track {
+  @apply bg-gradient-to-r from-yellow-400 to-pink-600;
   position: absolute;
   height: 4px;
-  background-color: #abe2fb;
+  /*background-color: #f2a9c3;*/
   border-radius: 6px;
 }
 .rc-slider-handle {
@@ -145,7 +146,7 @@ textarea::placeholder {
   height: 14px;
   margin-top: -5px;
   background-color: #fff;
-  border: solid 2px #96dbfa;
+  border: solid 2px #f04683;
   border-radius: 50%;
   cursor: pointer;
   cursor: -webkit-grab;
@@ -154,8 +155,8 @@ textarea::placeholder {
   touch-action: pan-x;
 }
 .rc-slider-handle-dragging.rc-slider-handle-dragging.rc-slider-handle-dragging {
-  border-color: #57c5f7;
-  box-shadow: 0 0 0 5px #96dbfa;
+  border-color: #db2768;
+  box-shadow: 0 0 0 5px #f04683;
 }
 .rc-slider-handle:focus {
   outline: none;
@@ -163,18 +164,18 @@ textarea::placeholder {
 }
 .rc-slider-handle:focus-visible {
   border-color: #2db7f5;
-  box-shadow: 0 0 0 3px #96dbfa;
+  box-shadow: 0 0 0 3px #f04683;
 }
 .rc-slider-handle-click-focused:focus {
-  border-color: #96dbfa;
+  border-color: #f04683;
   box-shadow: unset;
 }
 .rc-slider-handle:hover {
-  border-color: #57c5f7;
+  border-color: #db2768;
 }
 .rc-slider-handle:active {
-  border-color: #57c5f7;
-  box-shadow: 0 0 5px #57c5f7;
+  border-color: #db2768;
+  box-shadow: 0 0 5px #db2768;
   cursor: -webkit-grabbing;
   cursor: grabbing;
 }
@@ -215,7 +216,7 @@ textarea::placeholder {
   cursor: pointer;
 }
 .rc-slider-dot-active {
-  border-color: #96dbfa;
+  border-color: #f04683;
 }
 .rc-slider-dot-reverse {
   margin-right: -4px;
