--- a/media/vscode.css
+++ b/media/vscode.css
@@ -6,8 +6,25 @@
   background: var(--vscode-list-hoverBackground);
 }
 
-.bg-vscode-editor-foreground {
-  background: var(--vscode-textCodeBlock-background);
+.vscode-panel-border {
+  border: 1px solid var(--vscode-panel-border);
+}
+
+.vscode-menu-background {
+  background: var(--vscode-menu-background);
+}
+
+.hover\:vscode-list-active-selection:hover {
+  background: var(--vscode-list-activeSelectionBackground);
+  color: var(--vscode-list-activeSelectionForeground);
+}
+
+.vscode-icon-foreground {
+  color: var(--vscode-icon-foreground);
+}
+
+.vscode-badge-background {
+  background: var(--vscode-badge-background);
 }
 
 :root {
@@ -116,6 +133,12 @@ textarea {
 input::placeholder,
 textarea::placeholder {
   color: var(--vscode-input-placeholderForeground);
+}
+
+@layer utilities {
+  .hover\:list-hover-background:hover {
+    background: var(--list-hover-background);
+  }
 }
 
 /*RC SLIDER*/
@@ -230,8 +253,9 @@ textarea::placeholder {
   margin-right: -4px;
 }
 .rc-slider-disabled {
-  background-color: #e9e9e9;
+  /*background-color: #e9e9e9;*/
 }
+
 .rc-slider-disabled .rc-slider-track {
   background-color: #ccc;
 }
